src/test/deca/context/valid/created/cast_compatible/same_type/VOID.deca
// Description:
//      Cast d'un type identique
// Resultats:
//      OK

{
    void x = (void)();
}