src/test/deca/context/invalid/created/minus_boolean.deca
// Description :
// Opération unaire MINUS (-) sur un booleen
//
// Resultats :
// Error Contextuelle ->

{
    boolean b = - true;
}